Mineplex resource pack handler & other fixes