@@ -26,7 +26,9 @@ import org.json.simple.parser.ParseException;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
@@ -82,7 +84,7 @@ public class MapHandler {
 
         try {
 
-            File file = new File("./world/data/map_0.dat");
+            File file = new File(Bukkit.getWorldContainer().getAbsoluteFile() + "/world/data/map_0.dat");
             if (!file.exists()) {
                 if (!file.createNewFile()) {
                     log.error("Failed to create blank map file").submit();
@@ -99,10 +101,9 @@ public class MapHandler {
             if (map == null) {
                 map = Bukkit.createMap(world);
             }
-            if (!(map.getRenderers().get(0) instanceof MinimapRenderer)) {
-                for (MapRenderer r : map.getRenderers()) {
-                    map.removeRenderer(r);
-                }
+            if (!(map.getRenderers().getFirst() instanceof MinimapRenderer)) {
+                List<MapRenderer> renderers = new ArrayList<>(map.getRenderers());
+                renderers.forEach(map::removeRenderer);
 
                 MinimapRenderer minimapRenderer = clans.getInjector().getInstance(MinimapRenderer.class);
                 ClanMapRenderer clanMapRenderer = clans.getInjector().getInstance(ClanMapRenderer.class);
@@ -116,7 +117,8 @@ public class MapHandler {
                 map.addRenderer(clanMapRenderer);
 
             }
-            loadMapData((MinimapRenderer) map.getRenderers().get(0));
+
+            loadMapData((MinimapRenderer) map.getRenderers().getFirst());
         } catch (Exception ex) {
             log.error("Failed to load map", ex).submit();
         }
@@ -170,22 +172,23 @@ public class MapHandler {
                 if (map == null) {
                     map = Bukkit.createMap(Bukkit.getWorld("world"));
                 }
-                MinimapRenderer minimapRenderer = (MinimapRenderer) map.getRenderers().get(0);
 
-                try {
-                    final File file = new File("world/data/map.json");
-                    if (!file.exists()) {
-                        if(!file.createNewFile())  {
-                            log.error("Failed to create blank map file").submit();
+                if(map.getRenderers().getFirst() instanceof MinimapRenderer minimapRenderer) {
+                    try {
+                        final File file = new File("world/data/map.json");
+                        if (!file.exists()) {
+                            if (!file.createNewFile()) {
+                                log.error("Failed to create blank map file").submit();
+                            }
                         }
-                    }
 
-                    ObjectMapper mapper = new ObjectMapper();
-                    mapper.writeValue(file, minimapRenderer.getWorldCacheMap());
-                } catch (IOException e) {
-                    log.error("Failed to save map data", e).submit();
+                        ObjectMapper mapper = new ObjectMapper();
+                        mapper.writeValue(file, minimapRenderer.getWorldCacheMap());
+                    } catch (IOException e) {
+                        log.error("Failed to save map data", e).submit();
+                    }
+                    log.info("Saved map data in {}", UtilTime.getTime((System.currentTimeMillis() - l), 2)).submit();
                 }
-                log.info("Saved map data in {}", UtilTime.getTime((System.currentTimeMillis() - l), 2)).submit();
             }
         }.runTaskAsynchronously(clans);
     }
